2009-05-20  Stefan Kost  <ensonic@users.sf.net>

	* Makk/M4/waves/303_01.h:
	* Makk/M4/waves/303_02.h:
	* Makk/M4/waves/303_03.h:
	* Makk/M4/waves/303_04.h:
	* Makk/M4/waves/303_05.h:
	* Makk/M4/waves/303_06.h:
	* Makk/M4/waves/303_07.h:
	* Makk/M4/waves/303_08.h:
	* Makk/M4/waves/303_09.h:
	* Makk/M4/waves/303_10.h:
	* Makk/M4/waves/303_11.h:
	* Makk/M4/waves/303_12.h:
	* Makk/M4/waves/BASS01.h:
	* Makk/M4/waves/BASS02.h:
	* Makk/M4/waves/BASS03.h:
	* Makk/M4/waves/BASS04.h:
	* Makk/M4/waves/BASS05.h:
	* Makk/M4/waves/BASS06.h:
	* Makk/M4/waves/BASS07.h:
	* Makk/M4/waves/BASS08.h:
	* Makk/M4/waves/BASS09.h:
	* Makk/M4/waves/BASS10.h:
	* Makk/M4/waves/BASS11.h:
	* Makk/M4/waves/BASS12.h:
	* Makk/M4/waves/BASS13.h:
	* Makk/M4/waves/BASS14.h:
	* Makk/M4/waves/BASS15.h:
	* Makk/M4/waves/BASS16.h:
	* Makk/M4/waves/BASS17.h:
	* Makk/M4/waves/BASS18.h:
	* Makk/M4/waves/BASS19.h:
	* Makk/M4/waves/HARD01.h:
	* Makk/M4/waves/HARD02.h:
	* Makk/M4/waves/HARD03.h:
	* Makk/M4/waves/HARD04.h:
	* Makk/M4/waves/HARD05.h:
	* Makk/M4/waves/HARD06.h:
	* Makk/M4/waves/HARD07.h:
	* Makk/M4/waves/SAW01.h:
	* Makk/M4/waves/SAW02.h:
	* Makk/M4/waves/SAW03.h:
	* Makk/M4/waves/SAW04.h:
	* Makk/M4/waves/SAW05.h:
	* Makk/M4/waves/SAW06.h:
	* Makk/M4/waves/SAW07.h:
	* Makk/M4/waves/SAW08.h:
	* Makk/M4/waves/SAW09.h:
	* Makk/M4/waves/SAW10.h:
	* Makk/M4/waves/SAW_202.h:
	* Makk/M4/waves/SAW_DIGI.h:
	* Makk/M4/waves/SAW_MOOG.h:
	* Makk/M4/waves/SAW_SPEK.h:
	* Makk/M4/waves/SIN_DIGI.h:
	* Makk/M4/waves/SMOOTH01.h:
	* Makk/M4/waves/SMOOTH02.h:
	* Makk/M4/waves/SMOOTH03.h:
	* Makk/M4/waves/SMOOTH04.h:
	* Makk/M4/waves/SMOOTH05.h:
	* Makk/M4/waves/SPEK01.h:
	* Makk/M4/waves/SPEK02.h:
	* Makk/M4/waves/SPEK03.h:
	* Makk/M4/waves/SPEK04.h:
	* Makk/M4/waves/SPEK05.h:
	* Makk/M4/waves/SPEK06.h:
	* Makk/M4/waves/SPEK07.h:
	* Makk/M4/waves/SPEK08.h:
	* Makk/M4/waves/SPEK09.h:
	* Makk/M4/waves/SPEK10.h:
	* Makk/M4/waves/SPEK11.h:
	* Makk/M4/waves/SPEK12.h:
	* Makk/M4/waves/SQUARE01.h: